[gd_scene load_steps=7 format=2]

[ext_resource path="res://Equipments/Charge/Charge.gd" type="Script" id=1]
[ext_resource path="res://Equipments/Charge/Sprites/charge-red.png" type="Texture" id=2]
[ext_resource path="res://Equipments/EquipmentControl.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.24509, 9.36 )

[sub_resource type="RayShape2D" id=2]
length = 2.16264
slips_on_slope = true

[sub_resource type="RayShape2D" id=3]
length = 2.16472
slips_on_slope = true

[node name="Charge" type="StaticBody2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.8, 0.6 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EquipmentControl" parent="." instance=ExtResource( 3 )]

[node name="AbortingTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SetArea" type="Area2D" parent="."]

[node name="Up" type="CollisionShape2D" parent="SetArea"]
position = Vector2( 0, 9 )
rotation = -1.5708
scale = Vector2( 0.5, 1 )
shape = SubResource( 2 )

[node name="Mid" type="CollisionShape2D" parent="SetArea"]
rotation = -1.5708
scale = Vector2( 0.5, 1 )
shape = SubResource( 2 )

[node name="Down" type="CollisionShape2D" parent="SetArea"]
position = Vector2( 0, -9 )
rotation = -1.5708
scale = Vector2( 0.5, 1 )
shape = SubResource( 3 )
[connection signal="timeout" from="AbortingTimer" to="." method="_on_AbortingTimer_timeout"]
[connection signal="body_entered" from="SetArea" to="." method="_on_SetArea_body_entered"]
[connection signal="body_exited" from="SetArea" to="." method="_on_SetArea_body_exited"]
